# stellar-live-poll-dapp

./: Cargo.toml  README.md  package-lock.json
contracts/live_poll/: Cargo.toml
contracts/live_poll/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: LivePoll.tsx
src/: lib.rs
