[package]
name = "live_poll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"
stellar-xdr = { version = "=20.0.0", default-features = false }

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
arbitrary = "=1.3.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
